@@ -1,0 +1,155 @@
+# PASCAL highlighter for JOE
+
+=Idle
+=Comment green
+=Constant cyan
+=Type bold
+=Keyword bold
+=Operator bold
+=Function bold
+
+:idle Idle
+	*		idle
+	"a-zA-Z"	ident		buffer
+	"("		maybe_comment
+	"{"		comment		recolor=-1
+	"'"		string		recolor=-1
+	"0-9"		number		recolor=-1 
+
+# Comments
+
+:maybe_comment Idle
+	*		idle		noeat
+	"*"		comment		recolor=-2
+
+:comment Comment
+	*		comment
+	"*"		maybe_end_comment
+	"}"		idle
+
+:maybe_end_comment Comment
+	*		comment		noeat
+	")"		idle
+
+
+# String constant
+
+:string Constant
+	*		string
+	"\n"		idle
+	"'"		maybe_end_string
+
+:maybe_end_string Constant
+	*		idle		recolor=-1 noeat
+	"'"		string
+
+# Numeric constant
+
+:number Constant
+	*		idle		noeat
+	"0-9"		number
+	"eE"		epart
+	"."		dot
+
+:dot Constant
+	*		idle	noeat	recolor=-1
+	"0-9"		float
+
+:float Constant
+	*		idle	noeat	recolor=-1
+	"eE"		epart
+	"0-9"		float
+
+:epart Constant
+	*		idle	noeat	recolor=-1
+	"0-9+\-"	enum
+
+:enum Constant
+	*		idle	noeat	recolor=-1
+	"0-9"		enum
+
+
+# Keywords
+
+:ident Idle
+	*		idle		noeat istrings
+	"and"		operator
+	"array"		type
+	"begin"		kw
+	"case"		kw
+	"const"		kw
+	"div"		operator
+	"do"		kw
+	"downto"	kw
+	"else"		kw
+	"end"		kw
+	"file"		kw
+	"for"		kw
+	"function"	kw
+	"goto"		kw
+	"if"		kw
+	"in"		kw
+	"label"		kw
+	"mod"		operator
+	"nil"		word_constant
+	"not"		operator
+	"of"		kw
+	"or"		operator
+	"packed"	kw
+	"procedure"	kw
+	"program"	kw
+	"record"	kw
+	"repeat"	kw
+	"set"		kw
+	"then"		kw
+	"to"		kw
+	"type"		kw
+	"until"		kw
+	"var"		kw
+	"while"		kw
+	"with"		kw
+	"integer"	type
+	"boolean"	type
+	"real"		type
+	"char"		type
+	"string"	type
+	"text"		type
+	"abs"		function
+	"atan"		function
+	"arctan"	function
+	"concat"	function
+	"cos"		function
+	"eof"		function
+	"eoln"		function
+	"exp"		function
+	"insert"	function
+	"length"	function
+	"ln"		function
+	"log"		function
+	"odd"		function
+	"ord"		function
+	"page"		function
+	"pred"		function
+	"round"		function
+	"sin"		function
+	"sqr"		function
+	"sqrt"		function
+	"succ"		function
+	"trun"		function
+done
+	"a-zA-Z0-9_"	ident
+
+:kw Keyword
+	*	idle	noeat
+
+:type Type
+	*	idle	noeat
+
+:operator Operator
+	*	idle	noeat
+
+:word_constant Constant
+	*	idle	noeat
+
+:function Function
+	*	idle	noeat
