@@ -1,3 +1,9 @@
+Tue Apr 27 2004  Joe Allen <jhallen@world.std.com>
+	*:
+
+	More syntax files: html, pascal, vhdl.
+
+
 Mon Apr 26 2004  Joe Allen <jhallen@world.std.com>
 	*  Makefile.am bw.c configure.ac *rc.in utf8.c syntax/perl.jsf.in
 	syntax/verilog.jsf.in:
